--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "distamarkets",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "compile": "npx hardhat compile",
+    "test": "npx hardhat test",
+    "deploy": "npx hardhat run ./scripts/deploy.js",
+    "deploy-ropsten": "npx hardhat run ./scripts/deploy.js --network ropsten",
+    "verify": "npx hardhat verify 0x... --network ropsten"
   },
   "keywords": [],
   "author": "",
