--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@nomiclabs/hardhat-ethers": "^2.0.5",
     "@nomiclabs/hardhat-etherscan": "^3.0.3",
     "@nomiclabs/hardhat-waffle": "^2.0.3",
+    "@openzeppelin/test-helpers": "^0.5.15",
     "chai": "^4.3.6",
     "ethereum-waffle": "^3.4.4",
     "ethers": "^5.6.5",
@@ -25,6 +26,7 @@
   "dependencies": {
     "@openzeppelin/contracts": "^4.6.0",
     "dotenv": "^16.0.0",
+    "erc-payable-token": "^4.5.0",
     "hardhat-gas-reporter": "^1.0.8"
   }
 }
