--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "compile": "npx hardhat compile",
     "test": "npx hardhat test",
     "deploy": "npx hardhat run ./scripts/deploy.js",
+    "coverage": "npx hardhat coverage",
     "deploy-ropsten": "npx hardhat run ./scripts/deploy.js --network ropsten",
     "deploy-mumbai": "npx hardhat run ./scripts/deploy.js --network mumbai",
     "verify": "npx hardhat verify 0x... --network ropsten"
