--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "npx hardhat test",
     "deploy": "npx hardhat run ./scripts/deploy.js",
     "coverage": "npx hardhat coverage",
+    "linter": "npx hardhat check",
     "deploy-ropsten": "npx hardhat run ./scripts/deploy.js --network ropsten",
     "deploy-mumbai": "npx hardhat run ./scripts/deploy.js --network mumbai",
     "verify": "npx hardhat verify 0x... --network ropsten"
@@ -17,6 +18,7 @@
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.5",
     "@nomiclabs/hardhat-etherscan": "^3.0.3",
+    "@nomiclabs/hardhat-solhint": "^2.0.1",
     "@nomiclabs/hardhat-waffle": "^2.0.3",
     "@openzeppelin/test-helpers": "^0.5.15",
     "chai": "^4.3.6",
