--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "deploy": "npx hardhat run ./scripts/deploy.js",
     "coverage": "npx hardhat coverage",
     "linter": "npx hardhat check",
+    "prettify": "npx prettier --write 'contracts/**/*.sol'",
     "deploy-ropsten": "npx hardhat run ./scripts/deploy.js --network ropsten",
     "deploy-mumbai": "npx hardhat run ./scripts/deploy.js --network mumbai",
     "verify": "npx hardhat verify 0x... --network ropsten"
@@ -24,6 +25,8 @@
     "chai": "^4.3.6",
     "ethereum-waffle": "^3.4.4",
     "ethers": "^5.6.5",
+    "prettier": "^2.6.2",
+    "prettier-plugin-solidity": "^1.0.0-beta.19",
     "solidity-coverage": "^0.7.21"
   },
   "dependencies": {
