--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "scripts": {
     "compile": "npx hardhat compile",
     "test": "npx hardhat test",
-    "deploy": "npx hardhat run ./scripts/deploy.js",
+    "deploy": "npx hardhat run ./scripts/deploy.ts",
     "coverage": "npx hardhat coverage",
     "linter": "npx hardhat check",
     "prettify": "npx prettier --write 'contracts/**/*.sol'",
-    "deploy-ropsten": "npx hardhat run ./scripts/deploy.js --network ropsten",
-    "deploy-mumbai": "npx hardhat run ./scripts/deploy.js --network mumbai",
+    "deploy-ropsten": "npx hardhat run ./scripts/deploy.ts --network ropsten",
+    "deploy-mumbai": "npx hardhat run ./scripts/deploy.ts --network mumbai",
     "verify": "npx hardhat verify 0x... --network ropsten"
   },
   "keywords": [],
@@ -22,13 +22,19 @@
     "@nomiclabs/hardhat-solhint": "^2.0.1",
     "@nomiclabs/hardhat-waffle": "^2.0.3",
     "@openzeppelin/test-helpers": "^0.5.15",
+    "@typechain/ethers-v5": "^10.1.0",
+    "@typechain/hardhat": "^6.1.2",
+    "@types/chai": "^4.3.1",
+    "@types/mocha": "^9.1.1",
+    "@types/node": "^18.0.0",
     "chai": "^4.3.6",
     "ethereum-waffle": "^3.4.4",
     "ethers": "^5.6.5",
     "hardhat-contract-sizer": "^2.5.1",
     "prettier": "^2.6.2",
     "prettier-plugin-solidity": "^1.0.0-beta.19",
-    "solidity-coverage": "^0.7.21"
+    "solidity-coverage": "^0.7.21",
+    "ts-node": "^10.8.1"
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.6.0",
